mockup courses was added. styles, fonts, images

--- a/src/app/main/courses/courses.component.html
+++ b/src/app/main/courses/courses.component.html
@@ -1,3 +1,27 @@
 <div id="courses" class="component-container">
-  Courses is here!
+  <div class="courses">
+    <div class="info-courses">
+      <p class="info-title courses-title">Mucho más que una escuela de <b><u>creativos</u></b></p>
+      <p class="info-body">Un Brother es alguien que <u>piensa continuamente</u>,
+        inquieto, <b>curioso</b> y reflexivo.</p>
+      <p class="info-body">Que se plantea preguntas y busca las respuestas.
+        Un Brother es alguien que se abre camino,
+        proactivo, que tiene iniciativas, <b>que busca
+          oportunidades.</b></p>
+      <p class="info-body">Un Brother no deja que las cosas pasen. Va a
+        buscarlas y las pelea y que si gana, sigue a por
+        más.</p>
+      <p class="info-body">Y si pierde, <b>no se rinde <u>jamás.</u></b></p>
+    </div>
+    <div class="workshop-courses">
+      <p class="workshop-title courses-title">Cursos & Workshop</p>
+      <div class="grid-courses">
+        <div class="row">
+          <div class="col">Curso Anual de Creatividad</div>
+          <div class="col">Planificación y Estrategia Creativa 2021</div>
+          <div class="col">PR & Comunicación 2021</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
