--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -1,9 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-brother fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand">
+      <svg xmlns="http://www.w3.org/2000/svg" width="23.736" height="20.525" viewBox="0 0 23.736 20.525">
+        <g id="Grupo_12068" data-name="Grupo 12068" transform="translate(-1400.264 -1340.948)">
+          <path id="Trazado_11935" data-name="Trazado 11935" d="M9.48,1.192H.6a.074.074,0,0,0-.074.074v.269a.073.073,0,0,0,.057.072l2.453.56V23.953l-2.453.56a.073.073,0,0,0-.057.072v.27a.073.073,0,0,0,.074.074H9.48a.074.074,0,0,0,.074-.074V1.266A.074.074,0,0,0,9.48,1.192Z" transform="translate(1399.072 1362) rotate(-90)" fill="#e9e6e1"/>
+          <path id="Trazado_11936" data-name="Trazado 11936" d="M25.482,12.453c4.7-.43,6.431-3.508,6.431-5.56v-.1c0-3.506-2.762-5.6-7.388-5.6H22.742a.074.074,0,0,0-.074.074v.269a.074.074,0,0,0,.074.074h.583c1.679,0,2.364,1.521,2.364,5.251v.269c0,3.9-.521,5.149-2.146,5.149h-.8a.074.074,0,0,0-.074.074v.269a.074.074,0,0,0,.074.074h.728a1.9,1.9,0,0,1,1.9,1.126,11.046,11.046,0,0,1,.647,4.6v.809c0,4.928-.88,5.284-2.328,5.284h-.91a.074.074,0,0,0-.074.074v.27a.074.074,0,0,0,.074.074h1.965c2.777,0,4.919-.711,6.365-2.114a5.742,5.742,0,0,0,1.751-4.093v-.2C32.859,15.764,30.328,12.872,25.482,12.453Z" transform="translate(1399.072 1373.807) rotate(-90)" fill="#e9e6e1"/>
+        </g>
+      </svg>
+    </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -23,6 +27,48 @@
         </li>
       </ul>
       <form class="d-flex">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19.855" height="24.552" viewBox="0 0 19.855 24.552">
+          <defs>
+            <clipPath id="clip-path">
+              <rect id="Rectángulo_18314" data-name="Rectángulo 18314" width="24.536" height="9.309" fill="none"/>
+            </clipPath>
+          </defs>
+          <g id="Grupo_12040" data-name="Grupo 12040" transform="translate(0 24.552) rotate(-90)">
+            <g id="Icon_feather-calendar" data-name="Icon feather-calendar" transform="translate(0.021)">
+              <g id="Grupo_11782" data-name="Grupo 11782" transform="translate(0 9.878)">
+                <path id="Trazado_11752" data-name="Trazado 11752" d="M2114.562,1390.8h-18.8a2.87,2.87,0,0,1-2.867-2.867v-7.11h1.615v7.11a1.254,1.254,0,0,0,1.252,1.252h18.8a1.253,1.253,0,0,0,1.251-1.252v-7.11h1.615v7.11A2.87,2.87,0,0,1,2114.562,1390.8Z" transform="translate(-2092.898 -1380.818)" fill="#e9e6e1"/>
+              </g>
+              <g id="Grupo_11783" data-name="Grupo 11783">
+                <path id="Trazado_11753" data-name="Trazado 11753" d="M2117.429,1367.6h-1.615v-3.854a1.253,1.253,0,0,0-1.251-1.252h-18.8a1.254,1.254,0,0,0-1.252,1.252v3.854H2092.9v-3.854a2.87,2.87,0,0,1,2.867-2.867h18.8a2.87,2.87,0,0,1,2.867,2.867Z" transform="translate(-2092.898 -1360.881)" fill="#e9e6e1"/>
+              </g>
+            </g>
+            <g id="Grupo_11786" data-name="Grupo 11786" transform="translate(0 3.848)">
+              <g id="Grupo_11785" data-name="Grupo 11785" clip-path="url(#clip-path)">
+                <g id="Grupo_11784" data-name="Grupo 11784" transform="translate(-0.16 1.167)">
+                  <path id="Trazado_11754" data-name="Trazado 11754" d="M2104.991,1379.25l-12.458-6.609.87-1.639,11.594,6.151L2116.74,1371l.86,1.643Z" transform="translate(-2092.532 -1371.002)" fill="#e9e6e1"/>
+                </g>
+              </g>
+            </g>
+          </g>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20.726" height="20.57" viewBox="0 0 20.726 20.57">
+          <g id="Grupo_12039" data-name="Grupo 12039" transform="translate(0 20.57) rotate(-90)">
+            <g id="Grupo_11859" data-name="Grupo 11859">
+              <g id="Grupo_11856" data-name="Grupo 11856">
+                <path id="Trazado_11787" data-name="Trazado 11787" d="M13.857,20.726H6.713A6.72,6.72,0,0,1,0,14.014v-7.3A6.72,6.72,0,0,1,6.713,0h7.144A6.72,6.72,0,0,1,20.57,6.712v7.3A6.721,6.721,0,0,1,13.857,20.726ZM6.713,1.683a5.035,5.035,0,0,0-5.03,5.029v7.3a5.035,5.035,0,0,0,5.03,5.03h7.144a5.036,5.036,0,0,0,5.03-5.03v-7.3a5.035,5.035,0,0,0-5.03-5.029Z" fill="#e9e6e1"/>
+              </g>
+              <g id="Grupo_11857" data-name="Grupo 11857" transform="translate(5.097 5.195)">
+                <path id="Trazado_11788" data-name="Trazado 11788" d="M5.172,10.345A5.172,5.172,0,0,1,1.5,1.533a5.172,5.172,0,0,1,8.847,3.615,5.2,5.2,0,0,1-5.145,5.2Zm0-8.662H5.155a3.49,3.49,0,0,0,.017,6.98h.015A3.515,3.515,0,0,0,8.663,5.155a3.491,3.491,0,0,0-3.49-3.472Z" fill="#e9e6e1"/>
+              </g>
+              <g id="Grupo_11858" data-name="Grupo 11858" transform="translate(14.893 3.871)">
+                <path id="Trazado_11789" data-name="Trazado 11789" d="M.9,1.795a.9.9,0,1,1,.893-.9h0A.9.9,0,0,1,.9,1.795Z" fill="#e9e6e1"/>
+              </g>
+            </g>
+          </g>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20.726" height="20.726" viewBox="0 0 20.726 20.726">
+          <path id="Trazado_11934" data-name="Trazado 11934" d="M10.363,0A10.363,10.363,0,1,0,20.726,10.363,10.375,10.375,0,0,0,10.363,0Zm.489,6.519a17.2,17.2,0,0,0,3.964-.489,15.342,15.342,0,0,1,.59,3.845H10.852Zm0-.978V1.1c1.493.278,2.817,1.813,3.651,4A16.258,16.258,0,0,1,10.852,5.541ZM9.874,1.1V5.521a15.6,15.6,0,0,1-3.589-.572C7.122,2.842,8.417,1.37,9.874,1.1Zm0,5.4V9.874H5.32a15.251,15.251,0,0,1,.639-4.005A16.57,16.57,0,0,0,9.874,6.5ZM4.342,9.874H1A9.327,9.327,0,0,1,3,4.561a10.836,10.836,0,0,0,2.008.993A16.436,16.436,0,0,0,4.342,9.874Zm0,.978a16.49,16.49,0,0,0,.637,4.215,11.3,11.3,0,0,0-2.08.964A9.321,9.321,0,0,1,1,10.852Zm.978,0H9.874v3.366a16.926,16.926,0,0,0-3.943.556A15.311,15.311,0,0,1,5.32,10.852ZM9.874,15.2v4.433C8.4,19.353,7.088,17.848,6.253,15.7A15.98,15.98,0,0,1,9.874,15.2Zm.978,4.433V15.2a15.98,15.98,0,0,1,3.622.5C13.638,17.848,12.328,19.353,10.852,19.628Zm0-5.41V10.852h4.554a15.311,15.311,0,0,1-.612,3.922A16.926,16.926,0,0,0,10.852,14.218Zm5.532-3.366h3.34a9.321,9.321,0,0,1-1.9,5.179,11.3,11.3,0,0,0-2.08-.964A16.49,16.49,0,0,0,16.384,10.852Zm0-.978a16.542,16.542,0,0,0-.61-4.118,11.777,11.777,0,0,0,2.149-.932,9.318,9.318,0,0,1,1.8,5.05Zm.91-5.817a10.963,10.963,0,0,1-1.822.772,9.218,9.218,0,0,0-1.991-3.308A9.4,9.4,0,0,1,17.294,4.057ZM7.246,1.521a9.051,9.051,0,0,0-1.92,3.107,9.978,9.978,0,0,1-1.674-.812A9.4,9.4,0,0,1,7.246,1.521ZM3.539,16.787a10.476,10.476,0,0,1,1.749-.793A9.139,9.139,0,0,0,7.246,19.2,9.4,9.4,0,0,1,3.539,16.787ZM13.481,19.2a9.138,9.138,0,0,0,1.957-3.211,10.475,10.475,0,0,1,1.749.793A9.4,9.4,0,0,1,13.481,19.2Z" transform="translate(0 20.726) rotate(-90)" fill="#e9e6e1"/>
+        </svg>
       </form>
     </div>
   </div>
