navbar: padding fixed

--- a/src/app/main/navbar/navbar.component.scss
+++ b/src/app/main/navbar/navbar.component.scss
@@ -20,3 +20,13 @@
   padding-left: 200px;
 }
 
+.navbar-icon-item {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.navbar-brother__links__item {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
