--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,81 +1,51 @@
 <div id="home" class="component-container">
-  <div class="container">
-    <div class="row">
-      <div class="col-3">
-        <div class="row">
-          <div class="col-3">
-            hola1
-          </div>
+  <div class="body-container">
+    <div class="ast-container">
+      <svg xmlns="http://www.w3.org/2000/svg" width="60.743" height="60.742" viewBox="0 0 60.743 60.742">
+        <g id="Figura_móvil_asterisco_magenta" data-name="Figura móvil_asterisco magenta" transform="translate(-502.535 142.167)">
+          <path id="Trazado_11563" data-name="Trazado 11563" d="M541.278-114.306v4.932h-.26q-8.741-.519-16.96-1.211-9.951-.691-11.508-.779l2.942,1.384q16.525,7.787,22.756,10.989l.26.173L536-94.577l-.174-.173q-6.4-4.154-16.094-10.73-5.451-3.806-7.615-5.191l4.759,7.009q6.315,9,11.335,16.7l.087.174-4.24,2.509-.086-.26q-2.511-4.844-7.788-15.834Q513.5-106,511.339-110.412q0,.607.606,7.7,1.211,15.489,1.471,21.026v.26h-4.932v-.26q.519-8.739,1.211-16.959.691-9.949.779-11.508l-1.384,2.942Q501.3-90.682,498.1-84.453l-.174.259-4.24-2.509.173-.173q4.154-6.4,10.729-16.094,3.807-5.451,5.192-7.614l-7.009,4.759q-9,6.317-16.7,11.335l-.172.087-2.51-4.24.26-.087q4.844-2.509,15.835-7.787,5.623-2.681,10.037-4.845-.607,0-7.7.6-15.49,1.214-21.026,1.471h-.26v-4.932h.26q8.738.519,16.959,1.211,9.949.694,11.508.779l-2.941-1.384Q489.792-121.4,483.564-124.6l-.26-.173,2.51-4.241.173.174q6.4,4.153,16.094,10.729,5.451,3.809,7.614,5.191l-4.759-7.008q-6.317-9-11.336-16.7l-.086-.174,4.24-2.51.087.26q2.509,4.848,7.787,15.835,2.681,5.626,4.845,10.038,0-.6-.606-7.7-1.213-15.488-1.471-21.027v-.259h4.932v.259q-.519,8.741-1.211,16.96-.694,9.952-.779,11.508l1.384-2.942q7.787-16.526,10.989-22.756l.173-.26,4.24,2.51-.173.173q-4.153,6.4-10.729,16.094-3.809,5.452-5.191,7.615l7.008-4.759q9-6.315,16.7-11.335l.173-.086,2.509,4.24-.259.086q-4.846,2.511-15.835,7.788-5.626,2.683-10.037,4.845.6,0,7.7-.606,15.487-1.21,21.026-1.471Z" transform="translate(22 0)" fill="#ff1f57"/>
+        </g>
+      </svg>
+    </div>
+    <div class="hex-container">
+      <svg xmlns="http://www.w3.org/2000/svg" width="189.285" height="187.866" viewBox="0 0 189.285 187.866">
+        <path id="Trazado_11937" data-name="Trazado 11937" d="M99.54,0H33.18L0,57.47l33.18,57.47H99.54L132.72,57.47Z" transform="translate(6.873 95.628) rotate(-42)" fill="none" stroke="#e1df3c" stroke-width="9"/>
+      </svg>
+    </div>
+    <div class="ball-container"></div>
+    <div class="brother-madrid-container">
+      <div class="br-min-con">
+        <div class="minus-container">
+          <svg id="Grupo_12684" data-name="Grupo 12684" xmlns="http://www.w3.org/2000/svg" width="66" height="66" viewBox="0 0 66 66">
+            <g id="Elipse_700" data-name="Elipse 700" fill="none" stroke="#707070" stroke-width="2">
+              <circle cx="33" cy="33" r="33" stroke="none"/>
+              <circle cx="33" cy="33" r="32" fill="none"/>
+            </g>
+            <g id="_" data-name=" " transform="translate(16 33)" style="isolation: isolate">
+              <g id="Grupo_12668" data-name="Grupo 12668" style="isolation: isolate">
+                <path id="Trazado_12133" data-name="Trazado 12133" d="M-1188.148-1847.033v-1.26h35v1.26Z" transform="translate(1188.148 1848.293)" fill="#656565"/>
+              </g>
+            </g>
+          </svg>
         </div>
-        <div class="row">
-          <div class="col-3">
-            <svg xmlns="http://www.w3.org/2000/svg" width="189.285" height="187.866" viewBox="0 0 189.285 187.866">
-              <path id="Trazado_11937" data-name="Trazado 11937" d="M99.54,0H33.18L0,57.47l33.18,57.47H99.54L132.72,57.47Z" transform="translate(6.873 95.628) rotate(-42)" fill="none" stroke="#e1df3c" stroke-width="9"/>
-            </svg>
-          </div>
-        </div>
+        <div class="brother-container"></div>
       </div>
-      <div class="col-3">
-        <div class="row">
-          <div class="col-md-3">
-            <svg id="Grupo_12684" data-name="Grupo 12684" xmlns="http://www.w3.org/2000/svg" width="66" height="66" viewBox="0 0 66 66">
-              <g id="Elipse_700" data-name="Elipse 700" fill="none" stroke="#707070" stroke-width="2">
-                <circle cx="33" cy="33" r="33" stroke="none"/>
-                <circle cx="33" cy="33" r="32" fill="none"/>
+      <div class="mad-arr-con">
+        <div class="madrid-container"></div>
+        <div class="arrow-container">
+          <svg id="Grupo_12032" data-name="Grupo 12032" xmlns="http://www.w3.org/2000/svg" width="69.811" height="85.355" viewBox="0 0 69.811 85.355">
+            <g id="Grupo_12031" data-name="Grupo 12031" transform="translate(69.811 70.441) rotate(90)">
+              <path id="Trazado_11929" data-name="Trazado 11929" d="M14.914,0V69.811H0v-.419l8.582-3.63V4.049L0,.419V0Z" transform="translate(0 0)" fill="#e9e6e1"/>
+            </g>
+            <g id="_2" data-name=" 2" transform="translate(19.24)" style="isolation: isolate">
+              <g id="Grupo_12667" data-name="Grupo 12667" style="isolation: isolate">
+                <path id="Trazado_12132" data-name="Trazado 12132" d="M-621.974-1743.777l-.457-.264,36.291-16.746.229.132,3.643,39.8-.457-.264-11.512-23.005L-609.1-1704.13l-14.251-8.228,27.249-32.94Z" transform="translate(623.347 1760.787)" fill="#e5e1dc"/>
               </g>
-              <g id="_" data-name=" " transform="translate(16 33)" style="isolation: isolate">
-                <g id="Grupo_12668" data-name="Grupo 12668" style="isolation: isolate">
-                  <path id="Trazado_12133" data-name="Trazado 12133" d="M-1188.148-1847.033v-1.26h35v1.26Z" transform="translate(1188.148 1848.293)" fill="#656565"/>
-                </g>
-              </g>
-            </svg>
-          </div>
-          <div class="col-md-3">
-            <svg xmlns="http://www.w3.org/2000/svg" width="116.847" height="24.713" viewBox="0 0 116.847 24.713">
-              <g id="Grupo_12704" data-name="Grupo 12704" transform="translate(-1.83 -170.568)">
-                <g id="Grupo_12297" data-name="Grupo 12297" transform="translate(1.83 170.568)">
-                  <path id="Trazado_12002" data-name="Trazado 12002" d="M10.783,170.966H1.9a.073.073,0,0,0-.073.075v.268a.072.072,0,0,0,.057.071l2.454.561v21.786l-2.454.559a.076.076,0,0,0-.057.073v.268a.075.075,0,0,0,.073.075h8.88a.075.075,0,0,0,.073-.075V171.041A.073.073,0,0,0,10.783,170.966Z" transform="translate(-1.83 -170.158)"/>
-                  <path id="Trazado_12003" data-name="Trazado 12003" d="M9.726,182.227c4.705-.429,6.432-3.508,6.432-5.559v-.1c0-3.506-2.761-5.6-7.387-5.6H6.987a.075.075,0,0,0-.075.075v.268a.075.075,0,0,0,.075.073h.582c1.68,0,2.365,1.521,2.365,5.252v.268c0,3.9-.523,5.151-2.147,5.151h-.8a.075.075,0,0,0-.075.073v.268a.075.075,0,0,0,.075.075h.728a1.9,1.9,0,0,1,1.9,1.124,11.065,11.065,0,0,1,.647,4.6V189c0,4.927-.88,5.283-2.328,5.283H7.024a.076.076,0,0,0-.075.075v.268a.076.076,0,0,0,.075.075H8.988c2.778,0,4.919-.712,6.365-2.115A5.739,5.739,0,0,0,17.1,188.5v-.2C17.1,185.537,14.574,182.646,9.726,182.227Z" transform="translate(3.422 -170.158)"/>
-                  <path id="Trazado_12004" data-name="Trazado 12004" d="M19.758,174.148a2.746,2.746,0,1,0,2.985,2.8A2.9,2.9,0,0,0,19.758,174.148Z" transform="translate(13.685 -166.869)"/>
-                  <path id="Trazado_12005" data-name="Trazado 12005" d="M22.469,190.928l-2.456-.592V174.354a.073.073,0,0,0-.073-.073H12.772a.073.073,0,0,0-.075.073v.236a.075.075,0,0,0,.035.063l1.531.988v14.8l-1.8.492a.072.072,0,0,0-.055.071v.2a.075.075,0,0,0,.073.075h9.972a.075.075,0,0,0,.073-.075V191A.074.074,0,0,0,22.469,190.928Z" transform="translate(9.099 -166.732)"/>
-                  <path id="Trazado_12006" data-name="Trazado 12006" d="M27.455,174.148c-4.2.214-7.747,4.166-7.747,8.634v.169c0,4.449,3.548,8.386,7.747,8.6h0a.076.076,0,0,0,.075-.073v-.2a.086.086,0,0,0-.063-.073c-.872-.258-1.5-.445-1.5-8.249v-.169c0-7.729.62-7.959,1.48-8.274l.037-.014a.075.075,0,0,0,.049-.069v-.2a.076.076,0,0,0-.024-.053A.074.074,0,0,0,27.455,174.148Z" transform="translate(16.645 -166.869)"/>
-                  <path id="Trazado_12007" data-name="Trazado 12007" d="M24.313,174.148a.073.073,0,0,0-.077.073v.2a.073.073,0,0,0,.047.069l.037.014c.86.315,1.48.545,1.48,8.274v.169c0,7.8-.63,7.991-1.511,8.252a.074.074,0,0,0-.053.071v.2a.078.078,0,0,0,.022.053.08.08,0,0,0,.051.02h0c4.2-.214,7.747-4.15,7.747-8.6v-.169C32.06,178.314,28.512,174.362,24.313,174.148Z" transform="translate(21.324 -166.869)"/>
-                  <path id="Trazado_12008" data-name="Trazado 12008" d="M39.82,190.9l-.146-.1a.078.078,0,0,0-.1.014,2.676,2.676,0,0,1-2.125,1.019,1.543,1.543,0,0,1-1.637-1.747v-12.53H39.56a.073.073,0,0,0,.073-.073v-.472a.073.073,0,0,0-.073-.073H35.812v-5.218h-.327l-5.4,4.8a.074.074,0,0,0-.024.057v.364h-1.49a.075.075,0,0,0-.075.073v.472a.075.075,0,0,0,.075.073h1.49v12.833c0,2.361,1.645,3.713,4.514,3.713a5.335,5.335,0,0,0,5.271-3.109A.076.076,0,0,0,39.82,190.9Z" transform="translate(25.724 -169.384)"/>
-                  <path id="Trazado_12009" data-name="Trazado 12009" d="M43.326,194.767l-1.838-.492v-13.86l.146-9.772a.079.079,0,0,0-.026-.057.07.07,0,0,0-.059-.016l-7.314,1.145a.074.074,0,0,0-.063.073v.236a.072.072,0,0,0,.035.063l1.531.988v21.2l-1.767.49a.073.073,0,0,0-.053.071v.2a.075.075,0,0,0,.073.075h9.317a.075.075,0,0,0,.073-.075v-.2A.072.072,0,0,0,43.326,194.767Z" transform="translate(31.328 -170.568)"/>
-                  <path id="Trazado_12010" data-name="Trazado 12010" d="M48.875,191.068l-1.8-.492V178.67c0-2.832-1.619-4.522-4.331-4.522a7.322,7.322,0,0,0-4.414,1.637.068.068,0,0,0-.026.055v.2a.076.076,0,0,0,.075.075c2.009,0,2.946.939,2.946,2.959v11.5l-1.515.488a.075.075,0,0,0-.051.071v.2a.075.075,0,0,0,.075.075h9.024a.075.075,0,0,0,.073-.075v-.2A.072.072,0,0,0,48.875,191.068Z" transform="translate(35.859 -166.869)"/>
-                  <path id="Trazado_12011" data-name="Trazado 12011" d="M58.92,188.045a.076.076,0,0,0-.1-.022,7.806,7.806,0,0,1-3.676,1.037c-3.213,0-5.13-2.53-5.13-6.767v-.2c0-6.214,1.039-7.318,2.056-7.576a.076.076,0,0,0,.055-.073v-.2a.073.073,0,0,0-.073-.073,7.88,7.88,0,0,0-5.681,2.562,9.587,9.587,0,0,0-2.507,6.611v.134c0,4.841,3.085,8.093,7.678,8.093a9.754,9.754,0,0,0,7.515-3.225.074.074,0,0,0,.006-.094Z" transform="translate(41.611 -166.852)"/>
-                  <path id="Trazado_12012" data-name="Trazado 12012" d="M49.671,174.148a.073.073,0,0,0-.063.026.072.072,0,0,0-.014.069,22.6,22.6,0,0,1,.4,7.019l-2.3.165a.073.073,0,0,0-.069.073v.236a.073.073,0,0,0,.073.073h7.9a.073.073,0,0,0,.073-.073V181.2C55.669,178.05,53.26,174.467,49.671,174.148Z" transform="translate(45.494 -166.869)"/>
-                  <path id="Trazado_12013" data-name="Trazado 12013" d="M62.291,176.952a2.9,2.9,0,0,0-2.985-2.8,2.746,2.746,0,1,0,2.985,2.8Z" transform="translate(54.556 -166.869)"/>
-                  <path id="Trazado_12014" data-name="Trazado 12014" d="M62.018,190.928l-2.454-.592V174.354a.073.073,0,0,0-.075-.073H52.321a.073.073,0,0,0-.073.073v.236a.078.078,0,0,0,.033.063l1.531.988v14.8l-1.8.492a.072.072,0,0,0-.055.071v.2a.076.076,0,0,0,.075.075H62a.076.076,0,0,0,.075-.075V191A.076.076,0,0,0,62.018,190.928Z" transform="translate(49.969 -166.732)"/>
-                </g>
-              </g>
-            </svg>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3">
-            Madrid
-          </div>
-          <div class="col-md-3">
-            <svg id="Grupo_12032" data-name="Grupo 12032" xmlns="http://www.w3.org/2000/svg" width="69.811" height="85.355" viewBox="0 0 69.811 85.355">
-              <g id="Grupo_12031" data-name="Grupo 12031" transform="translate(69.811 70.441) rotate(90)">
-                <path id="Trazado_11929" data-name="Trazado 11929" d="M14.914,0V69.811H0v-.419l8.582-3.63V4.049L0,.419V0Z" transform="translate(0 0)" fill="#e9e6e1"/>
-              </g>
-              <g id="_2" data-name=" 2" transform="translate(19.24)" style="isolation: isolate">
-                <g id="Grupo_12667" data-name="Grupo 12667" style="isolation: isolate">
-                  <path id="Trazado_12132" data-name="Trazado 12132" d="M-621.974-1743.777l-.457-.264,36.291-16.746.229.132,3.643,39.8-.457-.264-11.512-23.005L-609.1-1704.13l-14.251-8.228,27.249-32.94Z" transform="translate(623.347 1760.787)" fill="#e5e1dc"/>
-                </g>
-              </g>
-            </svg>
-          </div>
+            </g>
+          </svg>
         </div>
       </div>
-      <div class="col-3">
-        hola3
-      </div>
-      <div class="col-3">
-        hola4
-      </div>
+      <div class="doers-container"></div>
     </div>
   </div>
 </div>
