fresh news mock was added

--- a/src/app/main/fresh-news/fresh-news.component.html
+++ b/src/app/main/fresh-news/fresh-news.component.html
@@ -1,3 +1,11 @@
 <div id="fresh-news" class="component-container">
-  Fresh-news is here!
+  <div class="fresh-news-title">
+    Noticias frescas
+  </div>
+  <div class="fresh-news-body">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 </div>
