--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -13,7 +13,11 @@
           <path id="Trazado_11937" data-name="Trazado 11937" d="M99.54,0H33.18L0,57.47l33.18,57.47H99.54L132.72,57.47Z" transform="translate(6.873 95.628) rotate(-42)" fill="none" stroke="#e1df3c" stroke-width="9"/>
         </svg>
       </div>
-      <div class="ball-container"></div>
+      <div class="ball-container">
+        <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33">
+          <circle id="Figura_móvil_circulo_magenta" data-name="Figura móvil_circulo magenta" cx="16.5" cy="16.5" r="16.5" fill="#ff1f57"/>
+        </svg>
+      </div>
     </div>
     <div class="brother-madrid-container">
       <div class="br-min-con">
@@ -53,7 +57,9 @@
         </div>
       </div>
       <div class="mad-arr-con">
-        <div class="madrid-container"></div>
+        <div class="madrid-container">
+          Madrid
+        </div>
         <div class="arrow-container">
           <svg id="Grupo_12032" data-name="Grupo 12032" xmlns="http://www.w3.org/2000/svg" width="69.811" height="85.355" viewBox="0 0 69.811 85.355">
             <g id="Grupo_12031" data-name="Grupo 12031" transform="translate(69.811 70.441) rotate(90)">
