--- a/src/app/main/fresh-news/fresh-news.component.scss
+++ b/src/app/main/fresh-news/fresh-news.component.scss
@@ -1,1 +1,21 @@
+.component-container {
+  background-color: #E9E6E1;//$--unnamed-color-e9e6e1;
+  height: 768px;
+}
 
+.fresh-news-title {
+  font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-bold) 48.83px/var(--unnamed-line-spacing-57) var(--unnamed-font-family-work-sans);
+  letter-spacing: var(--unnamed-character-spacing-0);
+  color: var(---000000);
+  text-align: center;
+  font: normal normal bold 49px/57px Work Sans;
+  letter-spacing: 0px;
+  color: #000000;
+  opacity: 1;
+  padding: 92px 379px 90px;
+}
+
+.fresh-news-body {
+  padding-left: 140px;
+  padding-right: 140px;
+}
