fixed images src..

--- a/src/app/main/fresh-news/fresh-news.component.html
+++ b/src/app/main/fresh-news/fresh-news.component.html
@@ -6,7 +6,7 @@
     <ng-container class="fresh-news-body-container" *ngFor="let fNews of freshNews">
       <div class="f-news-item">
         <div class="f-news-item-title">{{fNews.title}}</div>
-        <div class="f-news-item-image"></div>
+        <img src="{{fNews.image}}">
         <div class="f-news-item-date"></div>
       </div>
     </ng-container>
